fix(app): fix scrollbar and scroll sync

--- a/style.css
+++ b/style.css
@@ -12,6 +12,9 @@ html
     height: 88%;
     margin: auto;
 }
+.input-panel {
+  height: 93%;
+}
 .wmd-button-bar
 {
     width: 100%;
@@ -23,7 +26,7 @@ html
     display: block;
     float: left;
 
-    width: 99%;
+    width: 100%;
     height: 100%;
     margin-top: 38px;
     margin-left: 20px;
@@ -31,17 +34,17 @@ html
 
     border-width: 0;
     outline: none;
+
+    resize: none;
 }
 .left.panel {
     display: block;
     float: right;
     width: 50%;
-    height: 95%%;
+    height: 95%;
     margin-top: 38px;
     padding-left: 20px;
 
-    white-space: nowrap;
-    overflow-y: hidden;
 }
 .ui.divider {
    z-index: 0;
@@ -70,14 +73,13 @@ i.arrow.icon.spinned {
 {
     font-family: Menlo, Consolas, 'Courier New', Courier, monospace;
 
-    overflow: scroll;
     width: 97.5%;
     height: 100%;
     margin-left: 0px;
     padding-left: 20px;
 
     background-color: #f6f6f8;
-    overflow-y: hidden;
+        overflow-y: scroll;
 }
 .wmd-button-row
 {
